# flask-setup

./: LICENSE  README.md  pyproject.toml  setup.py
flask-setup/: __init__.py  __main__.py
flask_setup/: __main__.py  files.py  lib.py
flask_setup/files/: base.html
src/flask_setup/: __init__.py  __main__.py  files.py
